syntax = "proto3";

// Package Motor is used for defining a Motor node and its properties.
package sonrhq.protocol.vault.v1;

import "core/identity/v1/did.proto";
import "google/api/annotations.proto";
import "protocol/vault/v1/models.proto";

option go_package = "github.com/sonrhq/core/x/identity/types/vault/v1";

// NewWalletRequest is the request to register a new account.
message NewWalletRequest {
  string session_id = 1;
  string credential_response = 2;
  string prefix = 3; // optional
  int32 threshold = 4; // optional
}

// NewWalletResponse is the response to a Register request.
message NewWalletResponse {
  bool success = 1;
  string address = 2;
  core.identity.v1.DidDocument did_document = 3;
}

// CreateAccountRequest is the request to CreateAccount a new key from the private key.
message CreateAccountRequest {
  string prefix = 1;
  string account_name = 2;
  string credential_response = 3;
  string session_id = 4;
}

// CreateAccountResponse is the response to a CreateAccount request.
message CreateAccountResponse {
  bytes id = 1;
  string address = 2;
  core.identity.v1.DidDocument did_document = 3;
  AccountInfo new_account = 4;
}

// ListAccountsRequest is the request to list the accounts.
message ListAccountsRequest {
  string credential_response = 1;
  string session_id = 2;
}

// ListAccountsResponse is the response to a ListAccounts request.
message ListAccountsResponse {
  repeated AccountInfo accounts = 1;
}

// DeleteAccountRequest is the request to delete an account.
message DeleteAccountRequest {
  string credential_response = 1;
  string session_id = 2;
  string account_name = 3;
}

// DeleteAccountResponse is the response to a DeleteAccount request.
message DeleteAccountResponse {
  bool success = 1;
  core.identity.v1.DidDocument did_document = 2;
  AccountInfo deleted_account = 3;
}

// SignTransactionRequest is the request to sign data with the private key.
message SignTransactionRequest {
  string credential_response = 1;
  string session_id = 2;
  bytes data = 3;
}

// SignTransactionResponse is the response to a Sign request.
message SignTransactionResponse {
  bytes id = 1;
  bytes signature = 2;
  bytes data = 3;
  string creator = 4;
}

// RefreshRequest is the request to refresh the keypair.
message RefreshRequest {
  string credential_response = 1;
  string session_id = 2;
}

// RefreshResponse is the response to a Refresh request.
message RefreshResponse {
  bytes id = 1;
  string address = 2;
  core.identity.v1.DidDocument did_document = 3;
}

// ==================================================================
// GRPC/REST SERVICE
// ==================================================================

// Vault is the service used for managing a node's keypair.
service Vault {
  // NewWallet creates a new Webauthn credential and returns it.
  rpc NewWallet(NewWalletRequest) returns (NewWalletResponse) {
    option (google.api.http) = {
      post: "/sonr/protocol/vault/new-wallet"
      body: "*"
    };
  }

  // CreateAccount creates a new Bip32 child key and returns the configuration.
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {
    option (google.api.http) = {
      post: "/sonr/protocol/vault/create-account"
      body: "*"
    };
  }

  // ListAccounts lists the accounts and returns the configuration.
  rpc ListAccounts(ListAccountsRequest) returns (ListAccountsResponse) {
    option (google.api.http) = {
      post: "/sonr/protocol/vault/list-accounts"
      body: "*"
    };
  }

  // DeleteAccount deletes the account and returns the configuration.
  rpc DeleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse) {
    option (google.api.http) = {
      post: "/sonr/protocol/vault/delete-account"
      body: "*"
    };
  }

  // SignTransaction signs the data with the Wallet and returns the signature.
  rpc SignTransaction(SignTransactionRequest) returns (SignTransactionResponse) {
    option (google.api.http) = {
      post: "/sonr/protocol/vault/sign-transaction"
      body: "*"
    };
  }

  // Refresh refreshes the Wallet shares and returns the updated configuration.
  rpc Refresh(RefreshRequest) returns (RefreshResponse) {
    option (google.api.http) = {
      post: "/sonr/protocol/vault/refresh"
      body: "*"
    };
  }
}
